# Financial-Regulatory-Compliance-Engine

./: .env.example  .gitignore  README.md  databricks.yml  pyproject.toml
.github/workflows/: data-contracts.yml  deploy-dev.yml  policy-checks.yml  security.yml
.venv_broken/: pyvenv.cfg
.venv_broken/Scripts/: activate  activate.bat  find_spark_home.py
apps/: __init__.py
apps/batch/: __init__.py  frce_batch.py
apps/gdpr_erasure/: __init__.py  frce_gdpr_erasure.py
apps/incident_classifier/: __init__.py  frce_dora_incidents.py
apps/ml_scoring/: __init__.py  frce_anomaly_scoring.py
apps/streaming/: __init__.py  frce_payments_stream.py
benchmarks/: aml_scoring_perf.py  dora_incident_query_perf.py  erasure_cascade_perf.py
config/: dev.yml  local.yml  prod.yml  staging.yml
contracts/: aml_alerts.yml  counterparty.yml  fx_rates.yml  model_evidence.yml  payments.yml
data_products/aml_alerts/: contract.yml  risk_model.yml
data_products/counterparty_master/: contract.yml  ownership.yml  quality.yml  scd2_policy.yml
data_products/regulatory_evidence/: dora.yml  eu_ai_act.yml  gdpr.yml  ownership.yml
data_products/sepa_payments/: contract.yml  lineage.yml  ownership.yml  quality.yml  sla.yml
evidence/queries/: aml_alerts.sql  dora_incident_register.sql  gdpr_erasure_audit.sql  model_registry_evidence.sql
evidence/templates/: dora_incident_report.md  eu_ai_act_model_report.md  gdpr_erasure_report.md
infra/bundle/: databricks.yml
infra/sql/: catalogs.sql  grants.sql  masking_functions.sql  schemas.sql
policies/access/: role_matrix.yml  uc_grants.yml
policies/masking/: email_masking.sql  iban_masking.sql  name_masking.sql  pii_tags.yml
policies/opa/: no_plaintext_pii.rego  require_evidence_tables.rego
policies/retention/: audit_retention.yml  bronze_retention.yml  silver_retention.yml
scripts/: generate_counterparties.py  generate_payments.py
security/: data_classification.yml  secrets_policy.md  threat_model.md
simulations/chaos/: bad_pii_leak.yml  delayed_stream.yml  schema_drift.yml
simulations/counterparties/: generate_counterparties.py
simulations/gdpr/: scenarios.yml  submit_erasure_request.py
src/frce/: config.py  (+5 more)
(+133 files in other folders)
