[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frce"
version = "0.1.0"
description = "Financial Regulatory Compliance Engine"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Vlad Coada" }
]
dependencies = [
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "python-dotenv>=1.0,<2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.4,<1.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]